# loom

./: .gitignore  .gitmodules  README.md  REVIEWERS  boris-git.toml  boris.toml
framework/: mafia
loom-build/: loom-build.cabal  loom-build.lock-7.10.2  loom-build.lock-8.0.1
loom-build/src/Loom/: Build.hs
loom-build/test/: test-io.hs  test.hs
loom-cli/: loom-cli.cabal  loom-cli.lock-7.10.2  loom-cli.lock-8.0.1  loom-cli.lock-8.0.2  master.toml
loom-cli/main/: loom.hs
loom-cli/src/Loom/: Cli.hs
loom-cli/src/Loom/Cli/: Asset.hs  Build.hs  Env.hs  File.hs  Handlebars.hs  Javascript.hs  Manifest.hs  Process.hs  Purescript.hs  Sass.hs
loom-cli/test/: test-cli.hs  test-io.hs
loom-cli/test/Test/IO/Loom/Cli/: Env.hs  Purescript.hs  Sass.hs
loom-cli/test/cli/core/: env.sh
loom-cli/test/cli/example/: run
loom-cli/test/cli/example/app/purs/src/: Test.purs
loom-cli/test/cli/example/modules/mymodule/: module.purs
loom-cli/test/cli/example/scss/: main.scss  test.scss
loom-cli/test/cli/fail-purescript/: run
loom-cli/test/cli/fail-purescript/modules/mymodule/: module.purs
loom-cli/test/cli/fail-sass/: run
loom-cli/test/cli/fail-sass/scss/: main.scss
loom-cli/test/cli/purs/: loom.toml  run
loom-cli/test/cli/purs/app/js/: first.js
loom-cli/test/cli/purs/app/js/first/second/: index.js
loom-cli/test/cli/purs/app/js/src/third/: index.js
loom-cli/test/cli/purs/app/purs/src/: Bar.js  Bar.purs  Foo.js  Foo.purs
loom-cli/test/cli/purs/app/purs/test/Test/: Bar.purs
loom-cli/test/cli/purs/components/c1/: vanilla.js
loom-config-toml/: loom-config-toml.cabal  loom-config-toml.lock-7.10.2  loom-config-toml.lock-8.0.1
loom-config-toml/src/Loom/Config/: Toml.hs
loom-config-toml/test/: test-io.hs
loom-config-toml/test/Test/IO/Loom/Config/: Toml.hs
loom-config-toml/test/data/config/v1/: basic.toml  dependencies.toml  empty.toml  invalid.dependencies.toml  invalid.no-version.toml  invalid.paths-field.toml  invalid.unknown-version.toml  test.toml
loom-config-toml/test/data/config/v1/subdir/: basic.toml
loom-config-toml/test/data/config/v2/: github.toml
loom-core/: loom-core.cabal  loom-core.lock-7.10.2  loom-core.lock-8.0.1
loom-core/src/Loom/Core/: Data.hs
loom-fetch/: loom-fetch.cabal  loom-fetch.lock-7.10.2  loom-fetch.lock-8.0.1  master.toml
loom-fetch/src/Loom/: Fetch.hs
loom-fetch/src/Loom/Fetch/: Data.hs  HTTPS.hs
loom-fetch/src/Loom/Fetch/HTTPS/: Github.hs  Npm.hs
loom-git/: loom-git.cabal
loom-git/src/Loom/: Git.hs
loom-http/: loom-http.cabal  loom-http.lock-7.10.2  loom-http.lock-8.0.1  master.toml
loom-http/src/Loom/: Http.hs
loom-js/: loom-js.cabal  loom-js.lock-7.10.2  loom-js.lock-8.0.1  master.toml
loom-js/data/: browserify.js
loom-js/src/Loom/: Js.hs
loom-js/src/Loom/Js/: Browserify.hs  Node.hs
loom-js/test/: test-io.hs
loom-js/test/Test/IO/Loom/Js/: Browserify.hs
loom-machinator/: loom-machinator.cabal  loom-machinator.lock-7.10.2  loom-machinator.lock-8.0.1
loom-machinator/src/Loom/: Machinator.hs
loom-machinator/test/: test-io.hs
loom-machinator/test/Test/IO/Loom/: Machinator.hs
loom-process/: loom-process.cabal  loom-process.lock-7.10.2  loom-process.lock-8.0.1
loom-process/src/Loom/: Process.hs
loom-process/test/: test-io.hs
loom-process/test/Test/IO/Loom/: Process.hs
loom-projector/: loom-projector.cabal  loom-projector.lock-7.10.2  loom-projector.lock-8.0.1
loom-projector/src/Loom/: Projector.hs
loom-projector/test/: test-io.hs
loom-projector/test/Test/IO/Loom/: Projector.hs
loom-purescript/: loom-purescript.cabal  loom-purescript.lock-7.10.2  loom-purescript.lock-8.0.1  master.toml
loom-purescript/src/Loom/: Purescript.hs
loom-purescript/test/: test-io.hs
loom-purescript/test/Test/IO/Loom/: Purescript.hs
loom-runtime/: loom-runtime.cabal  loom-runtime.lock-7.10.2  loom-runtime.lock-8.0.1  master.toml
loom-runtime/src/Loom/Runtime/: Wai.hs
loom-runtime/test/: test.hs
loom-runtime/test/Test/Loom/Runtime/: Wai.hs
loom-sass/: loom-sass.cabal  loom-sass.lock-7.10.2  loom-sass.lock-8.0.1  master.toml
loom-sass/src/Loom/: Sass.hs
loom-sass/test/: test-io.hs
loom-sass/test/Test/IO/Loom/: Sass.hs
loom-site/: loom-site.cabal  loom-site.lock-7.10.2  loom-site.lock-8.0.1
loom-site/assets/: loom.css
loom-site/how/: component.md  machinator.md  projector.md
loom-site/src/Loom/: Site.hs
loom-site/test/: test-io.hs
loom-site/test/Test/IO/Loom/: Site.hs
loom-wai-assets/: loom-wai-assets.cabal  loom-wai-assets.lock-7.10.2
loom-wai-assets/src/Loom/Wai/: Assets.hs
loom-wai-assets/test/: test.hs
loom-wai-assets/test/Test/Loom/Wai/: Assets.hs
script/: loom
