name:                  ambiata-loom-build
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-build
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-build

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-loom-core
                    , ambiata-loom-fetch
                    , ambiata-loom-machinator
                    , ambiata-loom-projector
                    , ambiata-loom-sass
                    , ambiata-twine
                    , ambiata-x-eithert
                    , async                           == 2.1.*
                    , containers                      >= 0.4        && < 0.6
                    , directory                       == 1.2.*
                    , exceptions                      == 0.8.*
                    , filepath                        >= 1.4        && < 1.6
                    , fsnotify                        == 0.2.*
                    , Glob                            == 0.7.*
                    , temporary                       == 1.2.*
                    , text                            >= 1.1        && < 1.3
                    , time                            == 1.5.*
                    , transformers                    >= 0.4        && < 0.6
                    , unix                            == 2.7.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Build.Assets
                    Loom.Build.Component
                    Loom.Build.Core
                    Loom.Build.Data
                    Loom.Build.Haskell
                    Loom.Build.Logger
                    Loom.Build.Watch

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-build
                    , ambiata-loom-core
                    , ambiata-disorder-core
                    , ambiata-disorder-jack
                    , ambiata-p
                    , containers
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , text

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-eithert
                    , ambiata-disorder-jack
                    , ambiata-loom-build
                    , ambiata-loom-core
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , async
                    , directory
                    , filepath
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , temporary
                    , text
                    , transformers
