name:                  ambiata-loom-cli
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-cli
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           loom-cli

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.8.*
                    , ambiata-loom-process
                    , ambiata-p
                    , ambiata-x-eithert
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , cryptonite                      == 0.17.*
                    , directory                       == 1.2.*
                    , exceptions                      == 0.8.*
                    , filepath                        == 1.4.*
                    , Glob                            == 0.7.*
                    , megaparsec                      == 5.0.*
                    , process                         == 1.3.*
                    , text                            == 1.2.*
                    , time                            == 1.5.*
                    , transformers                    == 0.4.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Cli
                    Loom.Cli.Asset
                    Loom.Cli.Build
                    Loom.Cli.Env
                    Loom.Cli.File
                    Loom.Cli.Handlebars
                    Loom.Cli.Javascript
                    Loom.Cli.Manifest
                    Loom.Cli.Purescript
                    Loom.Cli.Sass

executable loom
  ghc-options:
                    -Wall -threaded -O2
                    -rtsopts -with-rtsopts "-T -N"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/loom.hs

  build-depends:
                      base
                    , ambiata-loom-cli
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-cli
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-eithert
                    , ambiata-loom-cli
                    , ambiata-loom-process
                    , ambiata-p
                    , ambiata-x-eithert
                    , directory                       == 1.2.*
                    , QuickCheck                      == 2.7.*
                    , temporary                       == 1.2.*
                    , text
                    , transformers

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-cli
                    , ambiata-disorder-core
