name:                  ambiata-loom-cli
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-cli
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           loom-cli

executable loom
  ghc-options:
                    -Wall -threaded -O2
                    -rtsopts -with-rtsopts "-T -N"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/loom.hs

  build-depends:
                      base
                    , ambiata-loom-build
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , directory                       == 1.2.*
                    , text

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
