name:                  ambiata-loom-cli
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-cli
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           loom-cli

executable loom
  ghc-options:
                    -Wall -threaded -O2
                    -rtsopts -with-rtsopts "-T -N"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/loom.hs

  build-depends:
                      base
                    , ambiata-loom-build
                    , ambiata-loom-config-toml
                    , ambiata-loom-core
                    , ambiata-loom-fetch
                    , ambiata-loom-http
                    , ambiata-loom-site
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , async                           == 2.1.*
                    , filepath                        >= 1.4        && < 1.7
                    , text
                    , transformers                    >= 0.4        && < 0.6
                    , warp                            >= 3.0        && < 3.3

                    -- required for 'tar', else it won't preserve file mtimes
                    , directory                       >= 1.2.3      && < 1.3

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
