name:                  ambiata-loom-config-toml
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-config-toml
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-config-toml

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-core
                    , ambiata-loom-build
                    , ambiata-p
                    , ambiata-x-htoml
                    , ambiata-x-eithert
                    , directory                       == 1.2.*
                    , filepath                        >= 1.4        && < 1.6
                    , lens                            >= 4.6        && < 4.16
                    , parsec                          == 3.1.*
                    , text                            >= 1.1        && < 1.3
                    , transformers                    >= 0.4        && < 0.6
                    , unordered-containers            == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Config.Toml

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-core
                    , ambiata-loom-config-toml
                    , ambiata-p
                    , ambiata-x-eithert
                    , QuickCheck                      == 2.8.*
                    , text
