name:                  ambiata-loom-fetch
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-fetch
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-fetch

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-core
                    , ambiata-p
                    , ambiata-x-eithert
                    , async                           == 2.*
                    , base16-bytestring               == 0.1.*
                    , bytestring                      == 0.10.*
                    , cryptohash-sha1                 == 0.11.*
                    , directory                       == 1.2.*
                    , filepath                        >= 1.4        && < 1.6
                    , http-client                     == 0.4.*
                    , http-client-tls                 == 0.2.*
                    , http-types                      >= 0.8        && < 0.10
                    , tar                             == 0.5.*
                    , temporary                       == 1.2.*
                    , text                            >= 1.1        && < 1.3
                    , transformers                    >= 0.4        && < 1.0
                    , zlib                            == 0.6.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Fetch
                    Loom.Fetch.Data
                    Loom.Fetch.HTTPS
                    Loom.Fetch.HTTPS.Github
                    Loom.Fetch.HTTPS.Npm


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-fetch
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-fetch
                    , ambiata-p
