name:                  ambiata-loom-http
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-http
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-http

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-x-eithert
                    , bytestring                      == 0.10.*
                    , directory                       == 1.2.*
                    , filepath                        >= 1.4        && < 1.6
                    , http-types                      == 0.8.*
                    , mime-types                      == 0.1.*
                    , text                            >= 1.1        && < 1.3
                    , transformers                    >= 0.4        && < 0.6
                    -- Duplicate definitions of hContentRange in warp and wai :(
                    -- https://github.com/yesodweb/wai/issues/439
                    , wai                             >= 3.0        && < 3.0.4.0

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Http

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-http
                    , ambiata-disorder-core
                    , ambiata-disorder-jack
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-jack
                    , ambiata-loom-http
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
