name:                  ambiata-loom-js
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-js
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-js

extra-source-files:
                      data/browserify.js

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-core
                    , ambiata-loom-fetch
                    , ambiata-p
                    , ambiata-x-eithert
                    , aeson                           >= 1.0        && < 1.2
                    , async                           == 2.1.*
                    , bytestring                      == 0.10.*
                    , directory                       == 1.2.*
                    , file-embed                      == 0.0.*
                    , filepath                        >= 1.4        && < 1.6
                    , hashable                        == 1.2.*
                    , process                         == 1.3.*
                    , text                            >= 1.1        && < 1.3
                    , temporary                       == 1.2.*
                    , transformers                    >= 0.4        && < 0.8

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Js
                    Loom.Js.Node
                    Loom.Js.Browserify

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-js
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-js
                    , ambiata-p
