name:                  ambiata-loom-process
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-process
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-process

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-x-eithert
                    , containers                      >= 0.4        && < 0.6
                    , directory                       == 1.2.*
                    , exceptions                      == 0.8.*
                    , filepath                        >= 1.4        && < 1.6
                    , process                         == 1.3.*
                    , text                            >= 1.1        && < 1.3
                    , transformers                    >= 0.4        && < 0.6

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Process

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-process
                    , ambiata-disorder-core
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-process
                    , ambiata-p
                    , ambiata-disorder-eithert
                    , ambiata-x-eithert
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
