name:                  ambiata-loom-purescript
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-purescript
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-purescript

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-loom-core
                    , ambiata-loom-fetch
                    , bytestring                      == 0.10.*
                    , containers                      >= 0.4        && < 0.6
                    , filepath                        >= 1.3        && < 1.5
                    , purescript                      == 0.9.3
                    , text                            >= 1.1        && < 1.3

                    -- To fix compile errors in purescript
                    , optparse-applicative            >= 0.11       && < 0.13

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Purescript

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-purescript
                    , ambiata-disorder-core
                    , ambiata-p
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-loom-purescript
                    , ambiata-p
                    , filepath
                    , QuickCheck                      == 2.8.*
                    , temporary                       == 1.2.*
                    , text
