name:                  ambiata-loom-runtime
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              loom-runtime
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           loom-runtime

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , bytestring                      == 0.10.*
                    , file-embed                      == 0.0.*
                    , filepath                        >= 1.3        && < 1.6
                    , containers                      >= 0.4        && < 0.6
                    , cryptonite                      >= 0.15       && < 0.18
                    , http-types                      == 0.8.*
                    , mime-types                      == 0.1.*
                    , text                            >= 1.1        && < 1.3
                    , wai                             == 3.0.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Loom.Runtime.Wai

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-loom-runtime
                    , ambiata-disorder-core
                    , ambiata-disorder-jack
                    , ambiata-p
                    , bytestring
                    , containers
                    , directory                       == 1.2.*
                    , filepath
                    , http-types
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , temporary                       == 1.2.*
                    , text
                    , wai
                    , wai-extra                       == 3.0.*
